fix z-index issue of panels

--- a/app/styles/views/tags/_list.scss
+++ b/app/styles/views/tags/_list.scss
@@ -54,7 +54,7 @@ body.tags-list {
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
     top: 0;
-    z-index: 1;
+    z-index: 4;
     &.leaving {
       animation-name: inputSectionSlideOut;
     }
@@ -67,7 +67,7 @@ body.tags-list {
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
     top: 0;
-    z-index: 1;
+    z-index: 4;
     &.leaving {
       animation-name: displaySectionSlideOut;
     }
@@ -108,6 +108,9 @@ body.tags-list:not(.tags-list-new):not(.tags-list-edit) {
     &:hover {
       transform: scale(1.05);
       box-shadow: 0px 40px 50px -20px rgba(0,0,0,0.3);
+    }
+    &.active {
+      box-shadow: 0px 40px 40px -20px rgba(0, 0, 0, 0.4), 0 0px 22px 5px rgba(69, 130, 236, 0.6)
     }
   }
 }
